--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content"
         android:visibility="gone"/>
 
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
+
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
