Registro de pasajero a medio hacer, ya conecta con firebase, falta la parte de metodo de pago

--- a/app/src/main/res/layout/activity_passenger_sign_up.xml
+++ b/app/src/main/res/layout/activity_passenger_sign_up.xml
@@ -130,7 +130,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="30dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/confirm"
+                android:text="Confirmar"
                 android:textStyle="bold"/>
         </LinearLayout>
     </ScrollView>
