--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,8 +98,9 @@
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/cardview_default_radius"
+                android:paddingLeft="@dimen/activity_vertical_margin"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="30dp"/>
 
