--- a/app/src/main/res/layout/activity_driver_sign_up.xml
+++ b/app/src/main/res/layout/activity_driver_sign_up.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="8dp"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="8dp"
+        android:layout_gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
