--- a/app/src/main/res/layout/activity_passenger_sign_up.xml
+++ b/app/src/main/res/layout/activity_passenger_sign_up.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="8dp"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="8dp"
+        android:layout_gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -48,20 +49,13 @@
                 android:layout_marginBottom="30dp"
                 android:src="@drawable/logo_huver"/>
 
-            <!--<CheckBox-->
-            <!--android:id="@+id/CheckBoxResponse"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="CheckBox"-->
-            <!--android:layout_width="fill_parent">-->
-            <!--</CheckBox>-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/action_register"
                 android:textAlignment="center"
                 android:textSize="30dp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
