Boton de logout en pantalla principal

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/perfil"
             android:icon="@drawable/ic_person"
-            android:title="Perfil"/>
+            android:title="Profile"/>
         <item
             android:id="@+id/chat"
             android:icon="@drawable/ic_chat"
@@ -13,19 +13,24 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Configuración"/>
+            android:title="Settings"/>
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
-            <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send"/>
+        </menu>
+    </item>
+
+    <item android:title="Session">
+        <menu>
+            <item
+                android:id="@+id/logout"
+                android:icon="@drawable/logout"
+                android:title="Logout"/>
         </menu>
     </item>
 
