Google places API colocada. Campo para ingreso de dirección habilitada

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -23,4 +23,7 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyCNTZg0oWlEunXignuJC6w_FWSin7wDYl4
     </string>
+    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyDbbSCzqZzxbIjn0R9wCIQe9t2x9cbi7I4
+    </string>
 </resources>
