--- a/app/src/main/res/layout/activity_passenger_sign_up.xml
+++ b/app/src/main/res/layout/activity_passenger_sign_up.xml
@@ -103,6 +103,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
