--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -61,6 +61,7 @@
             android:background="@color/cardview_light_background"
             android:gravity="center|bottom"
             android:orientation="horizontal"
+            android:padding="20dp"
             >
 
             <LinearLayout
@@ -130,27 +131,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
-            android:paddingBottom="20dp"
+            android:textAlignment="center"
+            android:padding="20dp"
             android:text="Indicar Recogida"/>
 
     </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_margin="@dimen/fab_margin"
-        android:visibility="gone"
-        app:srcCompat="@drawable/solicitar_viaje"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/next_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/rarrow"/>
-
 
 </android.support.design.widget.CoordinatorLayout>
