--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -14,6 +14,7 @@
     tools:context="com.example.darius.taller_uber.PaymentActivity">
     
     <ScrollView
+        android:id="@+id/paymentView"
         android:layout_width="312dp"
         android:layout_height="500dp"
         android:foregroundGravity="center"
