--- a/app/src/main/res/layout/activity_driver_sign_up.xml
+++ b/app/src/main/res/layout/activity_driver_sign_up.xml
@@ -104,6 +104,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/pw_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
