--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,8 +25,8 @@
 
     <ScrollView
         android:id="@+id/signup_form"
-        android:layout_width="336dp"
-        android:layout_height="463dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         >
 
         <LinearLayout
