--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -155,6 +155,7 @@
                         android:padding="5dp">
 
                         <TextView
+                            android:id="@+id/car_specs_nombre"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0"
@@ -182,6 +183,7 @@
                             android:text="Modelo:"/>
 
                         <TextView
+                            android:id="@+id/car_specs_modelo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -203,6 +205,7 @@
                             android:text="Patente:"/>
 
                         <TextView
+                            android:id="@+id/car_specs_patente"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -224,6 +227,7 @@
                             android:text="Musica:"/>
 
                         <TextView
+                            android:id="@+id/car_specs_musica"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -253,6 +257,7 @@
                             android:text="Aire:"/>
 
                         <TextView
+                            android:id="@+id/car_specs_aire"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -274,6 +279,7 @@
                             android:text="Estado del auto:"/>
 
                         <TextView
+                            android:id="@+id/car_specs_estado"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingLeft="5dp"
@@ -295,6 +301,8 @@
                             android:text="Año:"/>
 
                         <TextView
+
+                            android:id="@+id/car_specs_anio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingLeft="5dp"
@@ -316,6 +324,7 @@
                             android:text="Color:"/>
 
                         <TextView
+                            android:id="@+id/car_specs_color"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingLeft="5dp"
