--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,7 +34,7 @@
         android:layout_margin="5dp"
         android:padding="10dp"
         android:translationY="?attr/actionBarSize"
-        android:visibility="invisible"
+        android:visibility="gone"
         card_view:cardCornerRadius="4dp">
 
         <fragment
@@ -57,6 +57,7 @@
 
         <LinearLayout
             android:id="@+id/routeSpecs"
+            android:visibility="gone"
             android:animateLayoutChanges="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
